# usage-radar

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MVP.md  README.md  SPEC.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-18-feat-usage-radar-slice-plan.md  2026-06-02-apple-popover-ui-polish.md
src/: main.rs
src/app/: message.rs  mod.rs  startup.rs  state.rs
src/panel/: mod.rs
src/providers/: codex.rs  copilot.rs  kinds.rs  mod.rs  opencode_go.rs  snapshot.rs  urgency.rs
src/storage/: cache.rs  config.rs
src/tray/: icon.rs  menu.rs  mod.rs
src/util/: mod.rs  paths.rs  startup.rs
