[package]
name = "usage-radar"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6"
iced = { version = "0.13", features = ["tokio", "svg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lucide-icons = { version = "1.8", features = ["iced"] }
