[package]
name = "usage-radar"
version = "0.1.0"
edition = "2021"
description = "Tray-first desktop app for checking Codex and GitHub Copilot usage quickly"
readme = "README.md"
license = "MIT"

[dependencies]
dirs = "6"
iced = { version = "0.13", features = ["tokio", "svg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
lucide-icons = { version = "1.8", features = ["iced"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["linux-native-sync-persistent", "crypto-rust"] }
